<resources>
    <string name="app_name">Project App</string>
    <string name="name">AskApp</string>
    <string name="profile">Profile</string>
    <string name="others">others</string>
    <string name="settings">Settings</string>
    <string name="user">User</string>
    <string name="verified">Verified</string>
    <string name="about">About</string>
    <string name="home">Home</string>
    <string name="welcome">Welcome</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in">Sign In</string>
    <string name="error_view">Error View</string>
    <string name="password">Password</string>
    <string name="email_hint">user@domain.com</string>
    <string name="email">Email</string>
    <string name="username">full Name</string>
    <string name="submit">Submit Question</string>
    <string name="details">You can add more details to your question here</string>
    <string name="question">What is your question title</string>
    <string name="title">Question Title</string>
    <string name="already_signed_in">Already Signed In</string>
    <string name="addAnswer">Answer Question</string>
    <string name="SubmittedAnswers">Submitted Answers:</string>
    <string name="difficulty">difficulty</string>
    <string name="comments">Comments</string>
    <string name="addComment">Add Comment</string>
    <string name="categories">Categories</string>
    <string name="mathematics">Mathematics</string>
    <string name="blank">Blank</string>
    <string name="physics">Physics</string>
    <string name="computer_science">Computer Science</string>
    <string name="ask_a_question">Ask A Question</string>
    <string name="sign_out">Sign Out</string>
    <string name="SubmitAnswer">Submit Answer</string>
    <string name="writeHere">type your answer</string>
    <string name="questionList">Question List</string>
    <string name="userQuestionBtn">Review My Questions</string>
    <string name="label_submit">Save</string>
    <string name="label_cancel">Cancel</string>
    <string name="new_name">New Name</string>
    <string name="type_your_name"> type your name</string>

    <string name="question_bar_title">Add New Question</string>
    <string name="answer_bar_title">Add New Answer</string>
    <string name="comment_bar_title">Add New Comment</string>
    <string name="answerList">Answer List</string>
    <string name="userAnswerBtn">Review My Answers</string>

    <!-- Facebook application ID and custom URL scheme (app ID prefixed by 'fb'). -->
    <string name="facebook_application_id" translatable="false">351140462696956</string>
    <string name="facebook_login_protocol_scheme" translatable="false">5e5966047f991334cc0407e30bac034e</string>
    <string name="account">Account</string>
    <string name="invite_friends">Invite Friends</string>
    <string name="notifications">Notifications</string>
    <string name="personal_information">Personal Information</string>
    <string name="full_name">Full Name</string>
    <string name="e_mail_address">E-mail Address</string>
    <string name="phone_number">Phone Number</string>
    <string name="location">Location</string>
    <string name="sign_in_up_request">Please Sign-In or Create Account in Profile Page</string>
    <string name="press_to_update">Press to update</string>
    <string name="last_viewed_questions">Last Viewed Questions</string>
    <string name="newly_added_questions">Newly Added Questions</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search">Search</string>
    <string name="search2">Search:</string>
    <string name="you_can_search_here">You Can Search here</string>
    <string name="msg_subscribed">Message Subscribed</string>
    <string name="msg_subscribe_failed">Message Subscribe Failure</string>
    <string name="question_notifications">Question Notifications</string>
    <string name="new_answer_added">New answer added to question</string>
    <string name="new_comment_added">New comment added to question</string>
    <string name="new_rating_added">New rating on question</string>
    <string name="change_profile_photo">Change Profile Photo</string>
    <string name="newAnswer">New</string>
    <string name="description">Description</string>
</resources>
