<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:id="@+id/menuHome"
        android:icon="@drawable/home_icon"
        android:title="@string/home"/>

    <item android:id="@+id/menuProfile"
        android:icon="@drawable/profile_icon"
        android:title="@string/profile"/>

    <item android:id="@+id/menuCategories"
        android:icon="@drawable/category_icon"
        android:title="@string/categories"/>

    <item android:id="@+id/menuSearch"
        android:title="@string/search"
        android:icon="@drawable/search_icon"
        />

    <item android:title="@string/others">
        <menu>
            <item android:title="@string/settings"
                android:icon="@drawable/settings_icon"
                android:id="@+id/menuSettings"/>

            <item android:id="@+id/menuAbout"
                android:title="@string/about"
                android:icon="@drawable/about_icon"/>
        </menu>
    </item>
</menu>