<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    tools:context=".ProfileFragment"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <Button
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        app:layout_constraintVertical_bias="0.773"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintHorizontal_bias="0.763"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/sign_in" android:id="@+id/sign_in"/>

    <Button
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        app:layout_constraintVertical_bias="0.773"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintHorizontal_bias="0.45"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/sign_up"
        android:id="@+id/sign_up"/>

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/already_signed_in"
        android:id="@+id/signed" android:visibility="invisible"/>

</androidx.constraintlayout.widget.ConstraintLayout>

