<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SettingsFragment">


    <Button
        android:id="@+id/account_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/account"
        android:text="@string/account"
        android:gravity="start|center_vertical"
        android:textAllCaps="false"
        android:drawablePadding="10dp"
        android:background="@android:color/transparent"
        android:foreground="?attr/selectableItemBackground"/>

    <Button
        android:id="@+id/invite_friends_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/invite_friends"
        android:text="@string/invite_friends"
        android:gravity="start|center_vertical"
        android:textAllCaps="false"
        android:drawablePadding="10dp"
        android:background="@android:color/transparent"
        android:foreground="?attr/selectableItemBackground"/>

    <Button
        android:id="@+id/notifications_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/notifications"
        android:text="@string/notifications"
        android:gravity="start|center_vertical"
        android:textAllCaps="false"
        android:drawablePadding="10dp"
        android:background="@android:color/transparent"
        android:foreground="?attr/selectableItemBackground"/>

</LinearLayout>