<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".QuestionDetailActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Large Text"
        android:id="@+id/questionTV" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Medium Text"
        android:id="@+id/descriptionTV" />


    <LinearLayout
        android:layout_width="353dp"
        android:layout_height="57dp">

        <RatingBar
            android:id="@+id/rating_rating_bar"
            android:layout_width="240dp"
            android:layout_height="match_parent"
            android:numStars="5"
            android:stepSize=".5" />

        <ImageButton
            android:id="@+id/imageButton"
            android:layout_width="83dp"
            android:layout_height="61dp"
            android:background="@drawable/rate_btn"
            tools:ignore="contentDescription" />

    </LinearLayout>


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/addAnswer"
        android:id="@+id/answerBtn"
        android:onClick="submitAnswer"
        android:layout_gravity="center_horizontal" />
    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_height="wrap_content"
        android:text="@string/comments"
        android:onClick="GoTOComments"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/SubmittedAnswers"/>

    <ListView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/answersLV" />


</LinearLayout>