<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".PersonalInfoActivity">


    <ProgressBar
        android:id="@+id/progress_bar_personal_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:indeterminateDrawable="@drawable/progress"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/personal_info_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="visible">

        <LinearLayout
            android:id="@+id/name_layout"
            android:paddingTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/full_name_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/full_name" />

            <TextView
                android:id="@+id/full_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"/>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#000000" />


        <LinearLayout
            android:id="@+id/email_layout"
            android:paddingTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/email_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/e_mail_address" />

            <TextView
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"/>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#000000" />

        <LinearLayout
            android:id="@+id/phone_number_layout"
            android:paddingTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/phone_number_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/phone_number" />

            <TextView
                android:id="@+id/phone_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"/>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#000000" />

        <LinearLayout
            android:id="@+id/location_layout"
            android:paddingTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/location_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/location" />

            <TextView
                android:id="@+id/location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"/>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#000000" />

        <LinearLayout
            android:id="@+id/error1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:visibility="gone">
            <TextView
                android:id="@+id/error_text1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"/>
            <Button
                android:id="@+id/error_button1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/press_to_update"
                android:textSize="12sp"
                android:textAllCaps="false"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/error2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:visibility="gone">
            <TextView
                android:id="@+id/error_text2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"/>
            <Button
                android:id="@+id/error_button2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/press_to_update"
                android:textSize="12sp"
                android:textAllCaps="false"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/error3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:visibility="gone">
            <TextView
                android:id="@+id/error_text3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"/>
            <Button
                android:id="@+id/error_button3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/press_to_update"
                android:textSize="12sp"
                android:textAllCaps="false"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/error4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:visibility="gone">
            <TextView
                android:id="@+id/error_text4"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"/>
            <Button
                android:id="@+id/error_button4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/press_to_update"
                android:textSize="12sp"
                android:textAllCaps="false"/>
        </LinearLayout>

    </LinearLayout>
    <TextView
        android:id="@+id/request_sign_in_up"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/sign_in_up_request"
        android:textStyle="bold|italic"
        android:visibility="invisible"/>

</RelativeLayout>